--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="yemek.js"></script>
     <script src="fire.js"></script>
     <script src="shrink.js"></script>
+    <script src="player.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
   <style> body {padding: 0; margin: 0;} </style>
   </head>
