changes in game

--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link rel="stylesheet" href="styles.css">
+    <title>Kaan Cinar</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="theme-color" content="#ffffff">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/p5.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.11/addons/p5.sound.min.js"></script>
@@ -11,8 +23,20 @@
     <script src="shrink.js"></script>
     <script src="player.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
-  <style> body {padding: 0; margin: 0;} </style>
   </head>
   <body>
+    <div class='grid-container'>
+    <div class="topnav">
+      <a class="active" href="http://kaancinar.me/index.html">Home</a>
+      <a href="http://kaancinar.me/projects.html">Projects</a>
+      <a href="http://kaancinar.me/contact.html">Contact</a>
+    </div>  
+    <div class='main'>
+      <div id="gamediv"></div>
+    </div>
+    <div class='footer'>
+      Kaan Cinar
+    </div>
+  </div>
   </body>
 </html>
