--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <body>
     <div class='grid-container'>
     <div class="topnav">
-      <a class="active" href="http://kaancinar.me/index.html">Home</a>
-      <a href="http://kaancinar.me/projects.html">Projects</a>
+      <a href="http://kaancinar.me/index.html">Home</a>
+      <a class="active" href="http://kaancinar.me/projects.html">Projects</a>
       <a href="http://kaancinar.me/contact.html">Contact</a>
     </div>  
     <div class='main'>
